--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>wdd 131 Responsive webpages</title>
 </head>
 <body>
-    
+    <h1>welcome to Responsive webpages</h1>
 </body>
 </html>
