removed div as child of menu

--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -13,18 +13,18 @@
         </div>
         <nav>
             <menu>
-                <div class="button">
-                    <ul>Home</ul>
-                </div>
-                <div class="button">
-                    <ul>Projects</ul>
-                </div>
-                <div class="button">
-                    <ul>Services</ul>
-                </div>
-                <div class="button">
-                    <ul>Contact Us</ul>
-                </div>
+                <!-- <div class="button"> -->
+                    <a>Home</a>
+                <!-- </div> -->
+                <!-- <div class="button"> -->
+                    <a>Projects</a>
+                <!-- </div> -->
+                <!-- <div class="button"> -->
+                    <a>Services</a>
+                <!-- </div> -->
+                <!-- <div class="button"> -->
+                    <a>Contact Us</a>
+                <!-- </div> -->
             </menu>
         </nav>
     </header>
