--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <div class="above-menu">
+        <!-- <div class="above-menu"> -->
             <h1>Header</h1>
-        </div>
+        <!-- </div> -->
         <nav>
-            <menu>
+            <ul>
                 <!-- <div class="button"> -->
                     <a>Home</a>
                 <!-- </div> -->
@@ -25,7 +25,7 @@
                 <!-- <div class="button"> -->
                     <a>Contact Us</a>
                 <!-- </div> -->
-            </menu>
+            </ul>
         </nav>
     </header>
     <main>
