--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -12,7 +12,7 @@
             <h1>Header</h1>
         <!-- </div> -->
         <nav>
-            <ul>
+            <div class = "menu">
                 <!-- <div class="button"> -->
                     <a>Home</a>
                 <!-- </div> -->
@@ -25,7 +25,7 @@
                 <!-- <div class="button"> -->
                     <a>Contact Us</a>
                 <!-- </div> -->
-            </ul>
+            </div>
         </nav>
     </header>
     <main>
