figuring out js

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="description" content="Week 1 Assignment">
   <title>WDD 131 - Dynamic Web Fundamentals - Ashley Currier</title>
   <link rel="stylesheet" href="styles/base.css">
+  <!-- javascript - the defer is to check that the browser is compatible with javascript -->
+  <script src="getdates.js" defer></script>
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -67,7 +69,7 @@
 
   <footer>
       <p>
-        &copy; <span id="currentyear"></span> Ashley Currier, Utah
+        &copy; <span id="currentYear"></span> Ashley Currier, Utah
       </p>
       <p id="lastModified"></p>
   </footer>
