done? lets audit it

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="description" content="Week 1 Assignment">
   <title>WDD 131 - Dynamic Web Fundamentals - Ashley Currier</title>
   <link rel="stylesheet" href="styles/base.css">
-  <!-- javascript - the defer is to check that the browser is compatible with javascript -->
-  <script src="getdates.js" defer></script>
+  <!-- javascript - the defer is to have the javascript run in the background and not effect the page until thee html is loaded. Also to check that the browser is compatible with javascript??? -->
+  <script src="scripts/getdates.js" defer></script>
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,7 +44,7 @@
       <img class = "photo" src="images/about_me_photo_250x300px.jpg" alt="Picture of Me">
       <p class="body">
         
-        My name is Ashley. I am from Southern California, but I am living in Utah. I own a small business called <a href="https://happilyeverashley.com/shop">Happily Ever Ashley</a> I will be working for BYUI-Pathway Student Services this semester. I have a beautiful daughter whom I adore. I enjoy being creative and pedal-cycling aka bicycling with my daughter. I love going to the beach, boogie boarding and listening to the waves and watching the sunset. Sunsets at the beach are amazing!
+        My name is Ashley. I am from Southern California, but I am living in Utah. I own a small business called <a href="https://happilyeverashley.com/shop">Happily Ever Ashley</a> I will be working for BYUI-Pathway Student Services this semester. I have a beautiful daughter whom I adore. I enjoy being creative and pedal-cycling aka bicycling with my friends and family. I love going to the beach, boogie boarding and listening to the waves and watching the sunset. Sunsets at the beach are amazing!
         
       </p>
 
@@ -69,7 +69,7 @@
 
   <footer>
       <p>
-        &copy; <span id="currentYear"></span> Ashley Currier, Utah
+        &copy; <span id="currentYear"></span> Ashley Currier, Utah 
       </p>
       <p id="lastModified"></p>
   </footer>
