--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       </div>
       
       <ul>
-        <li class="links"> <a href="https://chatgpt.com/">Open AI</a></li> <br>
-        <li class="links"> <a href="https://developer.mozilla.org/">MDN Web Docs</a></li> <br>
-        <li class="links"> <a href="https://www.w3schools.com/">W3 Schools</a></li> <br>
+        <li class="links"> <a href="https://chatgpt.com/">Open AI</a></li> 
+        <li class="links"> <a href="https://developer.mozilla.org/">MDN Web Docs</a></li>
+        <li class="links"> <a href="https://www.w3schools.com/">W3 Schools</a></li>
         <li class="links"> <a href="https://duckduckgo.com/">Duck Duck Go</a>
       </ul>
     </section>
