--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="WDD 131 - Dynamic Web Fundamentals, Ashley Currier, About me">
-  <meta name="description" content="About Ashley Currier and her diverse native state of Southern California. A land of tectonic excitement.">
+  <meta name="description" content="Explore Ashley's WDD131 class resources, favorite scriptures, and more. Discover her LinkedIn and learn about her native Southern California, a land of tectonic excitement. A mysterious final project link awaits!">
   <title>WDD 131 - Dynamic Web Fundamentals - Ashley Currier</title>
   <link rel="stylesheet" href="styles/base.css">
   <!-- javascript - the defer is to have the javascript run in the background and not effect the page until thee html is loaded. Also to check that the browser is compatible with javascript??? -->
