--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                 <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/2?lang=eng&id=p25#p25">Scripture</a>
 
                 <a href="#">Final Project</a>
+
+                <a href="flashcards/index.html">Flashcards</a>
         </div>
     </nav>
     <!-- <br> -->
