--- a/temples.html
+++ b/temples.html
@@ -20,10 +20,10 @@
         <!-- Hamburger icon -->
          <div class="hamburger" id="hamburger">
             <div class="line"></div>
-            <div class="line"></div>
+            <div class="line" id="fading-line"></div>
             <div class="line"></div>
          </div>
-        <nav class = "menu">
+        <nav class = "menu" id="menu">
             <a class="menu-tags" href="#">Home</a>
             <a class="menu-tags" href="#">Old</a>
             <a class="menu-tags" href="#">New</a>
