yahoo! menu tags will not space out past 900px now

--- a/temples.html
+++ b/temples.html
@@ -24,11 +24,13 @@
             <div class="line"></div>
          </div>
         <nav class = "menu" id="menu">
-            <a class="menu-tags" href="#">Home</a>
-            <a class="menu-tags" href="#">Old</a>
-            <a class="menu-tags" href="#">New</a>
-            <a class="menu-tags" href="#">Large</a>
-            <a class="menu-tags" href="#">Small</a>
+            <div id="menu-tag-container">
+                <a class="menu-tags" href="#">Home</a>
+                <a class="menu-tags" href="#">Old</a>
+                <a class="menu-tags" href="#">New</a>
+                <a class="menu-tags" href="#">Large</a>
+                <a class="menu-tags" href="#">Small</a>
+            </div>
         </nav>
     </header>
     <main>
