--- a/temples.html
+++ b/temples.html
@@ -11,7 +11,7 @@
   <!-- Google Fonts: -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,900&family=Sofia&family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Sofia&family=Sofia+Sans&display=swap" rel="stylesheet">
   <title>Temple Album</title>
 </head>
 <body>
