--- a/temples.html
+++ b/temples.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="Your Name">
-  <meta name="description" content="#">
+  <meta name="author" content="Ashley Currier">
+  <meta name="description" content="Enjoy stunning photos of temples from The Church of Jesus Christ of Latter-day Saints, including the iconic Washington D.C. Temple. Explore now!">
   <link rel="stylesheet" href="styles/temples.css">
   <script src="scripts/temples.js" defer></script>
   <!-- color pallet: edafb8 (pink), f7e1d7(peach), dedbd2 (green-grey), b0c4b1 (Pale Green), 4a5759 (Olive) -->
@@ -23,15 +23,15 @@
             <div class="line" id="fading-line"></div>
             <div class="line"></div>
          </div>
-        <nav class = "menu" id="menu">
-            <div id="menu-tag-container">
+        <div class = "menu" id="menu">
+            <nav id="menu-tag-container">
                 <a class="menu-tags" href="#">Home</a>
                 <a class="menu-tags" href="#">Old</a>
                 <a class="menu-tags" href="#">New</a>
                 <a class="menu-tags" href="#">Large</a>
                 <a class="menu-tags" href="#">Small</a>
-            </div>
-        </nav>
+            </nav>
+        </div>
     </header>
     <main>
         <h2>Home</h2>
