just added nav to the .menu-tags:hover Marins on footer

--- a/temples.html
+++ b/temples.html
@@ -31,7 +31,7 @@
                 <a class="menu-tags" href="#">Large</a>
                 <a class="menu-tags" href="#">Small</a>
             </nav>
-        </div>
+        </nav>
     </header>
     <main>
         <h2>Home</h2>
