trying again - footer

--- a/temples.html
+++ b/temples.html
@@ -74,7 +74,7 @@
                 </figure>
             </div>
         </main>
-    <footer>
+    <footer id="footer-box">
         <p>
             &copy; <span id="currentYear"></span> Ashley Currier, Utah 
           </p>
