--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
                 <a href="#">Final Project</a>
 
-                <a href="flashcards/index.html">Flashcards</a>
+                <a href="flashcards/smarter_flashcards.html">Flashcards</a>
         </div>
     </nav>
     <!-- <br> -->
