trying to parse better

--- a/flashcards/smarter_flashcards.html
+++ b/flashcards/smarter_flashcards.html
@@ -9,7 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@600&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js" defer></script>
     <script src="scripts/updated_script.js" defer></script>
+
 </head>
 <body>
     <div class="flashcard-container">
