updated flashcards - trying to get chatgpt to fix the parsing problem

--- a/place.html
+++ b/place.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Ashley Currier">
-  <meta name="Discover Cancun" content="Welcome to our Cancun information hub! Stay updated with live weather reports and explore key statistics about Cancun, including its population, area, time zone, and more. Whether you're planning a trip or just curious, find all the essential details about this beautiful coastal city in one place">
+  <meta name="description" content="Welcome to our Cancun information hub! Stay updated with live weather reports and explore key statistics about Cancun, including its population, area, time zone, and more. Whether you're planning a trip or just curious, find all the essential details about this beautiful coastal city in one place">
   <link rel="stylesheet" href="styles/place.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,7 +37,7 @@
 
     </div>
     <div id="weather"> 
-      <div  class="box-head"><h2>Weather<img src="images/weather-icon.svg" id="weather-icon"></h2></div>
+      <div  class="box-head"><h2>Weather<img src="images/weather-icon.svg" id="weather-icon" alt="emoticon of a sun"></h2></div>
       <p id="weather-info">
         <div class="data-line"><h3>Temperature: </h3> &emsp;<span class="definition" id="temperature"></span>&deg;C</div>
         <div class="data-line"><h3>Conditions: </h3> &emsp;<span class="definition" id="conditions"></span></div>
