--- a/place.html
+++ b/place.html
@@ -19,7 +19,7 @@
     <picture id="hero-img">
       <source srcset="images/cancun-arial-view.webp" media="(min-width: 1000px)">
       <!-- alt="A stunning scene of Cancun, Mexico, with clear blue waters, white sandy beaches, palm trees swaying in the breeze, and a vibrant sunset over the horizon. Realistic but AI generated" -->
-      <source srcset="images/cancun-iguana.webp" media="(min-width: 550px)">
+      <source srcset="images/cancun-flowers.webp" media="(min-width: 550px)">
       <img src="images/cancun_stingray.webp" alt="Beautiful images demonstrating the wonder of Cancun"
         sizes="(min-width: 1000px) 100vw, (min-width: 550px) 50vw, 100vw">
     </picture>
@@ -37,7 +37,7 @@
 
     </div>
     <div id="weather"> 
-      <div  class="box-head"><h2>Weather<img src="images/weather-icon.svg" id="weather-icon" alt="emoticon of a sun"></h2></div>
+      <div  class="box-head"><h2>Weather</h2></div>
       <p id="weather-info">
         <div class="data-line"><h3>Temperature: </h3> &emsp;<span class="definition" id="temperature"></span>&deg;C</div>
         <div class="data-line"><h3>Conditions: </h3> &emsp;<span class="definition" id="conditions"></span></div>
