--- a/place.html
+++ b/place.html
@@ -20,8 +20,10 @@
       <source srcset="images/cancun-arial-view.webp" media="(min-width: 1000px)">
       <!-- alt="A stunning scene of Cancun, Mexico, with clear blue waters, white sandy beaches, palm trees swaying in the breeze, and a vibrant sunset over the horizon. Realistic but AI generated" -->
       <source srcset="images/cancun-flowers.webp" media="(min-width: 550px)">
-      <img src="images/cancun_stingray.webp" alt="Beautiful images demonstrating the wonder of Cancun"
-        sizes="(min-width: 1000px) 100vw, (min-width: 550px) 50vw, 100vw">
+      <img src="images/cancun_stingray.webp" 
+       alt="Beautiful images demonstrating the wonder of Cancun"
+       sizes="(min-width: 1000px) 100vw, (min-width: 550px) 50vw, 100vw">
+
     </picture>
     <div id="data">
       <div class="box-head"><h2>Data</h2></div>
@@ -38,12 +40,12 @@
     </div>
     <div id="weather"> 
       <div  class="box-head"><h2>Weather</h2></div>
-      <p id="weather-info">
+      <div id="weather-info">
         <div class="data-line"><h3>Temperature: </h3> &emsp;<span class="definition" id="temperature"></span>&deg;C</div>
         <div class="data-line"><h3>Conditions: </h3> &emsp;<span class="definition" id="conditions"></span></div>
         <div class="data-line"><h3>Wind: </h3> &emsp;<span class="definition" id="wind"></span> km/h</div>
         <div class="data-line"><h3>Wind Chill: </h3> &emsp;<span class="definition" id="wind_chill"></span>&deg;C</div>
-      </p>
+      </div>
     </div>
   </main>
   <footer>
