--- a/place.html
+++ b/place.html
@@ -7,10 +7,11 @@
   <meta name="description" content="Welcome to our Cancun information hub! Stay updated with live weather reports and explore key statistics about Cancun, including its population, area, time zone, and more. Whether you're planning a trip or just curious, find all the essential details about this beautiful coastal city in one place">
   <link rel="stylesheet" href="styles/place.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
   <title>Cancun</title>
-  <script src="scripts/place.js" defer></script></head>
+  <script src="scripts/place.js" defer></script>
+</head>
 <body>
   <header>
     <section id="header-section"><h1>Cancun</h1></section>
@@ -19,7 +20,7 @@
     <picture id="hero-img">
       <source srcset="images/cancun-arial-view.webp" media="(min-width: 1000px)">
       <!-- alt="A stunning scene of Cancun, Mexico, with clear blue waters, white sandy beaches, palm trees swaying in the breeze, and a vibrant sunset over the horizon. Realistic but AI generated" -->
-      <source srcset="images/cancun-flowers.webp" media="(min-width: 550px)">
+      <source srcset="images/cancun-flowers.webp" media="(min-width: 800px)">
       <img src="images/cancun_stingray.webp" 
        alt="Beautiful images demonstrating the wonder of Cancun"
        sizes="(min-width: 1000px) 100vw, (min-width: 550px) 50vw, 100vw">
