--- a/place.html
+++ b/place.html
@@ -40,7 +40,7 @@
 
     </div>
     <div id="weather"> 
-      <div  class="box-head"><h2>Weather</h2></div>
+      <div  class="box-head"><h2>Weather<img src="images/weather-icon.svg"></h2></div>
       <div id="weather-info">
         <div class="data-line"><h3>Temperature: </h3> &emsp;<span class="definition" id="temperature"></span>&deg;C</div>
         <div class="data-line"><h3>Conditions: </h3> &emsp;<span class="definition" id="conditions"></span></div>
