--- a/place.html
+++ b/place.html
@@ -42,7 +42,7 @@
       <div  class="box-head"><h2>Weather</h2></div>
       <div id="mobile-weather">
         <picture>
-          <source srcset="images/sunset_icon.svg" media="(min-width:200px)">
+          <img source srcset="images/sunset_icon.svg" media="(min-width:200px)">
         </picture> 
       </div>
       <div id="weather-info">
