--- a/place.html
+++ b/place.html
@@ -25,7 +25,7 @@
        alt="Beautiful images demonstrating the wonder of Cancun">
 
     </picture>
-    <div id="data">
+    <div id="data" class = "boxes">
       <div class="box-head"><h2>Data</h2></div>
       <div class="data-line"><h3>Area<span class="colon">:</span> </h3> &emsp;  1,979 km&sup2; </div>
       <div class="data-line"><h3>Population<span class="colon">:</span> </h3> &emsp;<span class="definition" id="population">888,797</span></div>
@@ -38,12 +38,9 @@
       
 
     </div>
-    <div id="weather"> 
+    <div id="weather" class = "boxes"> 
       <div  class="box-head"><h2>Weather</h2></div>
       <div id="mobile-weather">
-        <picture>
-          <img source srcset="images/sunset_icon.svg" media="(min-width:200px)">
-        </picture> 
       </div>
       <div id="weather-info">
         <div class="data-line"><h3>Temperature: </h3> &emsp;<span class="definition" id="temperature"></span>&deg;C</div>
