--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -25,20 +25,20 @@
          </div>
         <div class = "menu" id="menu">
             <nav id="menu-tag-container">
-                <a class="menu-tags" href="#">Home</a>
-                <a class="menu-tags" href="#">Old</a>
-                <a class="menu-tags" href="#">New</a>
-                <a class="menu-tags" href="#">Large</a>
-                <a class="menu-tags" href="#">Small</a>
+                <a class="menu-tags" href="#" id = "home">Home</a>
+                <a class="menu-tags" href="#" id = "old">Old</a>
+                <a class="menu-tags" href="#" id = "new">New</a>
+                <a class="menu-tags" href="#" id = "large">Large</a>
+                <a class="menu-tags" href="#" id = "small">Small</a>
             </nav>
-        </nav>
+       </div>
     </header>
     <main>
         <h2>Home</h2>
-        <div class="main-box" id="main-box">
+        <div id="mainbox"></div>
+
             
                     
-        </div>
     </main>
     <footer id="footer-box">
         <p>
