--- a/form.html
+++ b/form.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Ashley Currier">
   <meta name="description" content="Help others by sharing your product experience in this lovely product review form.">
   <link rel="stylesheet" href="styles\review.css">
-  <script src= "scripts/formscript.js" defer></script>
+  <script src= "scripts\    formscript.js" defer></script>
   <title>Product Review</title>
   <!-- <script src="scripts/script.js" defer></script> -->
 </head>
