--- a/form.html
+++ b/form.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Ashley Currier">
   <meta name="description" content="Help others by sharing your product experience in this lovely product review form.">
-  <link rel="stylesheet" href="styles\review.css">
-  <script src= "scripts\formscript.js" defer></script>
+  <link rel="stylesheet" href="styles/review.css">
+  <script src= "scripts/formscript.js" defer></script>
   <title>Product Review</title>
   <!-- <script src="scripts/script.js" defer></script> -->
 </head>
