--- a/form.html
+++ b/form.html
@@ -43,10 +43,10 @@
             <div class="formSection" id="usefulFeatures-textbox">
                 <label for="features">What Features did you like or dislike about the product? (Check all that apply)</label>
                 <div class="underLabelSpace"></div>
-                <input type="checkbox" name="features" id="features" value="warpCore">Warp Core</input>
-                <input type="checkbox" name="features" id="features" value="customization">Customization</input>
-                <input type="checkbox" name="features" id="features" value="support">Support</input>
-                <input type="checkbox" name="features" id="features" value="price">Price</input>
+                <input type="checkbox" name="features" class="features" value="warpCore">Warp Core</input>
+                <input type="checkbox" name="features" class="features" value="customization">Customization</input>
+                <input type="checkbox" name="features" class="features" value="support">Support</input>
+                <input type="checkbox" name="features" class="features" value="price">Price</input>
             </div>
             <br>
 
