--- a/form.html
+++ b/form.html
@@ -61,7 +61,7 @@
             </div>
             <br>
             <div class="formSection" id="submit-button-div">
-                <input type="submit" value="Submit">
+                <input type="submit" value="submit">
                 <label name="submit"></label>
             </div>
    
