--- a/form.html
+++ b/form.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Ashley Currier">
   <meta name="description" content="Help others by sharing your product experience in this lovely product review form.">
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/review.css">
   <script src= "scripts/formscript.js" defer></script>
   <title>Product Review</title>
