--- a/form.html
+++ b/form.html
@@ -41,7 +41,7 @@
             <div class="formSection" id="installation-date">
                 <label for="installationDate">Installation Date<abbr title="This field is mandatory" aria-label="required">*</abbr></label>
                 <div class="underLabelSpace"></div>
-                <input type="date" name="installationDate" id="installationDate" required>
+                <input type="date" name="installationDate" id="installationDate" required />
             </div>
             <br>
             <div class="formSection" id="usefulFeatures-textbox">
