--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/review.css">
   <script src= "scripts/formscript.js" defer></script>
   <title>Product Review</title>
@@ -31,11 +31,23 @@
             <div class="formSection" id="radio-product-info">
                 <label>Rate the Product (1-5)<abbr title="This field is mandatory" aria-label="required">*</abbr></label>
                 <div class="underLabelSpace"></div>
-                <input type="radio" name="rating" value="1" required>1
-                <input type="radio" name="rating" value="2" required>2
-                <input type="radio" name="rating" value="3" required>3
-                <input type="radio" name="rating" value="4" required>4
-                <input type="radio" name="rating" value="5" required>5
+                
+                <label>
+                    <input type="radio" name="rating" value="1" required>1
+                  </label>
+                  <label>
+                    <input type="radio" name="rating" value="2" required>2
+                  </label>
+                  <label>
+                    <input type="radio" name="rating" value="3" required>3
+                  </label>
+                  <label>
+                    <input type="radio" name="rating" value="4" required>4
+                  </label>
+                  <label>
+                    <input type="radio" name="rating" value="5" required>5
+                  </label>
+                
             </div>
             <br>
             <div class="formSection" id="installation-date">
