--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -17,8 +17,8 @@
 
     
     <body>
-        <header>
-            <h1>Pedal Cycle Provo Site Plan</h1>
+        <header id="site-plan">
+            <h1 class="normal-heading">Pedal Cycle Provo Site Plan</h1>
         </header>
 
         <main>
