--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Work+Sans:ital@0;1&display=swap" rel="stylesheet">
     <!-- <script src="scripts/scripts.js" defer></script> -->
-    <title>Pedal Cycle Provo</title>
+    <title>Site Description</title>
     <!-- <script src="scripts/script.js" defer></script> -->
     </head>
 
