--- a/project/index.html
+++ b/project/index.html
@@ -28,6 +28,7 @@
         <div id= "header-image-box">
             <img class="header-image" src="images/provo-trail-scene.webp" alt="an image of trees and a dirt trail with scenic mountains in the background in Provo" loading="lazy">
         </div>
+        <div class="accent-bar"></div>
         <div id="bike-logo-box">
             <img class="bike-logo" src="images/bike-logo.svg" alt="A bike logo with a sun and a mountain in the background">
             <h1>Pedal Cycle Provo</h1>
@@ -40,8 +41,21 @@
               
             <p>Welcome to Pedal Cycle Provo, a local community center where you can explore and enjoy pedaling in the beautiful Provo area.</p>
         </div>
+
+        <div id="img2-box">
+            <img src="images/provo-img2.webp" alt="one of the many gorgeous provo waterfalls">
+        </div>
+
     </main>
 
+
+    <footer id="footer-box">
+        <p>
+            &copy; <span id="currentYear"></span> Ashley Currier, Utah 
+          </p>
+          <p id="lastModified"></p>
+          <p>&#127875;Happy Halloween! &#127875;</p>
+    </footer>
   
 </body>
 </html>
