nice accordion done

--- a/project/faq.html
+++ b/project/faq.html
@@ -21,7 +21,7 @@
     </header>
     <main>
 
-        <section id="section1">
+        <section id="accordianSection">
             <h1>Frequently Asked Questions</h1>
             <div id="faqContainer"></div>
         </section>
