--- a/project/index.html
+++ b/project/index.html
@@ -22,7 +22,7 @@
     </header>
     <main>
 
-        <section id="section1">
+        <section class="section1">
             <div id="bike-logo-box">
                 <div id="tilt-header-box">
                     <h1 id="tilted-heading">Pedal Cycle Provo &emsp; &emsp;<span class="space">   - -</span></h1>
