--- a/project/laws-regulations.html
+++ b/project/laws-regulations.html
@@ -21,7 +21,7 @@
     </header>
     <main>
 
-        <section id="section1">
+        <section class="section1">
             <p>
                 
             </p>
